fix double images, add tablet version, fixed modile horizontal scroll

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -50,7 +50,6 @@ body {
   }
 }
 
-
 @media (min-width: 1200px) {
   .header__img-med,
   .third-block__img-med,
@@ -157,9 +156,6 @@ body {
       font-size: 16px;
       margin-bottom: 60px;
     }
-
-    &__img-med {
-    }
   }
 
   .sixth-block {
@@ -184,14 +180,6 @@ body {
       position: absolute;
       bottom: 0;
       right: 0;
-    }
-
-    .seventh-block__img-mini {
-      width: 320px;
-      height: 174.8px;
-      position: absolute;
-      bottom: 0;
-      margin-left: -32px;
     }
 
     .seventh-block__container-card {
@@ -383,11 +371,11 @@ body {
     left: 20px;
   }
 
-  .second-block__nav {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
+  // .second-block__nav {
+  //   list-style: none;
+  //   margin: 0;
+  //   padding: 0;
+  // }
 
   .second-block__nav-list {
     display: flex;
